2019-10-23  Truitt Savell  <tsavell@apple.com>

        Unreviewed, rolling out r251482.

        r251261 broke multiple tests, reverting this as part of that
        rollout.

        Reverted changeset:

        "[ Mac WK1 ] REGRESSION (r251261): Layout Test
        inspector/console/webcore-logging.html is consistently
        Failing"
        https://bugs.webkit.org/show_bug.cgi?id=203173
        https://trac.webkit.org/changeset/251482

2019-10-23  Chris Dumez  <cdumez@apple.com>

        FileSystemDirectoryReader / FileSystemEntry should not prevent entering the back/forward cache
        https://bugs.webkit.org/show_bug.cgi?id=203090
        <rdar://problem/56550805>

        Reviewed by Geoffrey Garen.

        Add layout test coverage.

        * editing/pasteboard/entries-api/DirectoryEntry-getFile-back-forward-cache-expected.txt: Added.
        * editing/pasteboard/entries-api/DirectoryEntry-getFile-back-forward-cache.html: Added.
        * editing/pasteboard/entries-api/DirectoryReader-readEntries-back-forward-cache-expected.txt: Added.
        * editing/pasteboard/entries-api/DirectoryReader-readEntries-back-forward-cache.html: Added.

2019-10-23  Truitt Savell  <tsavell@apple.com>

        update expectations for inspector/heap/getRemoteObject.html
        https://bugs.webkit.org/show_bug.cgi?id=156077

        Unreviewed test gardening.

        * platform/mac-wk2/TestExpectations:

2019-10-23  Chris Dumez  <cdumez@apple.com>

        Ignore document.open/write after the active parser has been aborted
        https://bugs.webkit.org/show_bug.cgi?id=203028

        Reviewed by Geoffrey Garen.

        Import test from blink.

        * imported/blink/fast/loader/document-write-after-location-change-expected.txt: Added.
        * imported/blink/fast/loader/document-write-after-location-change.html: Added.
        * imported/blink/fast/loader/resources/pass-and-notify-done.html: Added.

2019-10-23  Russell Epstein  <repstein@apple.com>
