@@ -26,8 +26,7 @@ function removeElementWithClass(className) {
 
 function test() {
     let documentNode = null;
-    let pseudoElementAdded = null;
-    let pseudoElementRemoved = null;
+    let pseudoElement = null;
 
     function handlePromiseReject(error) {
         console.log(error);
@@ -57,37 +56,27 @@ function test() {
         .catch(handlePromiseReject);
     }
 
-    function createElementWithClass(className, shouldCheckElement) {
+    function createElementWithClass(className) {
         return evaluateWithLog(`createElementWithClass("${className}")`)
         .then(() => checkElementsWithClass(className, 1))
-        .then(() => {
-            if (shouldCheckElement) {
-                if (pseudoElementAdded)
-                    ProtocolTest.pass(`Created ::${pseudoElementAdded.pseudoType} pseudo element`);
-                else
-                    return pseudoElementAddedPromise.then(() => { ProtocolTest.pass(`Created ::${pseudoElementAdded.pseudoType} pseudo element`); });
-            }
-        })
         .catch(handlePromiseReject);
     }
 
-    function removeElementWithClass(className, shouldCheckElement) {
+    function removeElementWithClass(className) {
         return evaluateWithLog(`removeElementWithClass("${className}")`)
         .then(() => checkElementsWithClass(className, 0))
-        .then(() => {
-            if (shouldCheckElement) {
-                if (pseudoElementRemoved)
-                    ProtocolTest.expectEqual(pseudoElementRemoved.pseudoElementId, pseudoElementAdded.nodeId, `Removed ::${pseudoElementAdded.pseudoType} pseudo element`);
-                else
-                    return pseudoElementRemovedPromise.then(() => { ProtocolTest.expectEqual(pseudoElementRemoved.pseudoElementId, pseudoElementAdded.nodeId, `Removed ::${pseudoElementAdded.pseudoType} pseudo element`); });
-            }
-        })
         .catch(handlePromiseReject);
     }
 
-    let pseudoElementAddedPromise = InspectorProtocol.awaitEvent({event: "DOM.pseudoElementAdded"}).then((event) => { pseudoElementAdded = event.params.pseudoElement});
-    let pseudoElementRemovedPromise = InspectorProtocol.awaitEvent({event: "DOM.pseudoElementRemoved"}).then((event) => { pseudoElementRemoved = event.params});
+    InspectorProtocol.eventHandler["DOM.pseudoElementAdded"] = (response) => {
+        pseudoElement = response.params.pseudoElement;
 
+        ProtocolTest.pass(`Created ::${pseudoElement.pseudoType} pseudo element`);
+    };
+
+    InspectorProtocol.eventHandler["DOM.pseudoElementRemoved"] = (response) => {
+        ProtocolTest.expectEqual(response.params.pseudoElementId, pseudoElement.nodeId, `Removed ::${pseudoElement.pseudoType} pseudo element`);
+    };
 
     ProtocolTest.log("Requesting document...");
     InspectorProtocol.sendCommand("DOM.getDocument", {}, (response) => {
@@ -96,10 +85,10 @@ function test() {
         documentNode = response.result.root;
 
         Promise.resolve()
-        .then(() => createElementWithClass("test-pseudo-without-content"), false)
-        .then(() => removeElementWithClass("test-pseudo-without-content"), false)
-        .then(() => createElementWithClass("test-pseudo-with-content", true))
-        .then(() => removeElementWithClass("test-pseudo-with-content", true))
+        .then(() => createElementWithClass("test-pseudo-without-content"))
+        .then(() => removeElementWithClass("test-pseudo-without-content"))
+        .then(() => createElementWithClass("test-pseudo-with-content"))
+        .then(() => removeElementWithClass("test-pseudo-with-content"))
         .then(() => ProtocolTest.completeTest())
         .catch(handlePromiseReject);
     });
