@@ -36,13 +36,25 @@
 #import <wtf/Assertions.h>
 #import <wtf/HashSet.h>
 #import <wtf/RetainPtr.h>
-#import <wtf/RunLoop.h>
 #import <wtf/SchedulePair.h>
 #import <wtf/Threading.h>
 
 #if USE(WEB_THREAD)
 #include <wtf/ios/WebCoreThread.h>
 #endif
+
+@interface JSWTFMainThreadCaller : NSObject
+- (void)call;
+@end
+
+@implementation JSWTFMainThreadCaller
+
+- (void)call
+{
+    WTF::dispatchFunctionsFromMainThread();
+}
+
+@end
 
 #define LOG_CHANNEL_PREFIX Log
 
@@ -54,6 +66,8 @@ WTFLogChannel LogThreading = { WTFLogChannelState::On, "Threading", WTFLogLevel:
 WTFLogChannel LogThreading = { WTFLogChannelState::On, "Threading", WTFLogLevel::Error, LOG_CHANNEL_WEBKIT_SUBSYSTEM, OS_LOG_DEFAULT };
 #endif
 
+
+static JSWTFMainThreadCaller* staticMainThreadCaller;
 static bool isTimerPosted; // This is only accessed on the main thread.
 
 #if USE(WEB_THREAD)
@@ -70,6 +84,9 @@ void initializeMainThreadPlatform()
     if (!pthread_main_np())
         RELEASE_LOG_FAULT(Threading, "WebKit Threading Violation - initial use of WebKit from a secondary thread.");
     ASSERT(pthread_main_np());
+
+    ASSERT(!staticMainThreadCaller);
+    staticMainThreadCaller = [[JSWTFMainThreadCaller alloc] init];
 }
 
 static void timerFired(CFRunLoopTimerRef timer, void*)
@@ -95,6 +112,8 @@ static void postTimer()
 
 void scheduleDispatchFunctionsOnMainThread()
 {
+    ASSERT(staticMainThreadCaller);
+    
 #if USE(WEB_THREAD)
     if (isWebThread()) {
         postTimer();
@@ -102,9 +121,7 @@ void scheduleDispatchFunctionsOnMainThread()
     }
 
     if (mainThreadPthread) {
-        RunLoop::web().dispatch([] {
-            WTF::dispatchFunctionsFromMainThread();
-        });
+        [staticMainThreadCaller performSelector:@selector(call) onThread:mainThreadNSThread withObject:nil waitUntilDone:NO];
         return;
     }
 #else
@@ -114,9 +131,7 @@ void scheduleDispatchFunctionsOnMainThread()
     }
 #endif
 
-    RunLoop::main().dispatch([] {
-        WTF::dispatchFunctionsFromMainThread();
-    });
+    [staticMainThreadCaller performSelectorOnMainThread:@selector(call) withObject:nil waitUntilDone:NO];
 }
 
 void dispatchAsyncOnMainThreadWithWebThreadLockIfNeeded(void (^block)())
@@ -181,7 +196,6 @@ void initializeWebThread()
         mainThreadPthread = pthread_self();
         mainThreadNSThread = [NSThread currentThread];
         sWebThread = &Thread::current();
-        RunLoop::initializeWebRunLoop();
     });
 }
 
