@@ -1,3 +1,15 @@
+2019-10-23  Truitt Savell  <tsavell@apple.com>
+
+        Unreviewed, rolling out r251261.
+
+        This broke multiple tests
+
+        Reverted changeset:
+
+        "Using version 1 CFRunloopSource for faster task dispatch"
+        https://bugs.webkit.org/show_bug.cgi?id=202874
+        https://trac.webkit.org/changeset/251261
+
 2019-10-21  Jiewen Tan  <jiewen_tan@apple.com>
 
         [WebAuthn] Warn users when multiple NFC tags present
