@@ -1,5 +1,17 @@
 2019-10-23  Truitt Savell  <tsavell@apple.com>
 
+        Unreviewed, rolling out r251261.
+
+        This broke multiple tests
+
+        Reverted changeset:
+
+        "Using version 1 CFRunloopSource for faster task dispatch"
+        https://bugs.webkit.org/show_bug.cgi?id=202874
+        https://trac.webkit.org/changeset/251261
+
+2019-10-23  Truitt Savell  <tsavell@apple.com>
+
         Unreviewed, rolling out r251482.
 
         r251261 broke multiple tests, reverting this as part of that
